@@ -23,6 +23,7 @@ int doFlash (WF3Info *, SingleGroup *, float *);
 int flashHistory (WF3Info *, Hdr *);
 int doBlev (WF3Info *, SingleGroup *, int, float *, int *, int *);
 int blevHistory (WF3Info *, Hdr *, int, int);
+void cross_talk_corr(WF3Info *, SingleGroup *);
 int CCDHistory (WF3Info *, Hdr *);
 int doDQI (WF3Info *, SingleGroup *, int overscan);
 int dqiHistory (WF3Info *, Hdr *);
